# lmnb

./: .gitignore  .pre-commit-config.yaml  README.md  hatch.toml  license.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-laplaciannb.yml  build-lmnb.yml  ruff.yml  tests.yml
bayes/: LaplacianNB.py  __init__.py  utils.py
examples/: bayes_tutorial.ipynb  run_bayes.py
src/laplacianb/: LaplacianNB.py
tests/: bayes_test.py
tests/data/: smiles_test.csv
